...
        </array>
    </customFonts>
    <scenes>
        <!--Master-->
        <scene sceneID="pY4-Hu-kfo">
            <objects>
                <navigationController title="Master" id="RMx-3f-FxP" sceneMemberID="viewController">
                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                    <size key="freeformSize" width="375" height="667"/>
                    <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Pmd-2v-anx">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" red="0.91372549020000005" green="0.1960784314" blue="0.2470588235" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
            </objects>
            <point key="canvasLocation" x="-38" y="-630"/>
        </scene>
        <!--Detail-->
        <scene sceneID="yUG-lL-AsK">
            <objects>
                <viewController title="Detail" id="JEX-9P-axG" customClass="DetailViewController" customModule="MyDeals" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="SYR-Wa-9uf"/>
                        <viewControllerLayoutGuide type="bottom" id="GAO-Cl-Wes"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="svH-Pt-448">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5CB-6j-5b4">
                                <rect key="frame" x="16" y="629" width="343" height="30"/>
                                <color key="backgroundColor" red="0.9137254901960784" green="0.19607843137254902" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="ecA-Vr-BkI"/>
                                </constraints>
                                <state key="normal" title="Go to deal"/>
                                <connections>
                                    <segue destination="wMD-3A-ohT" kind="show" identifier="viewWebDeal" id="TGx-ZA-Pwm"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <include reference="1YJ-QH-9IQ"/>
                                <exclude reference="xW7-4u-l7m"/>
                            </mask>
                        </variation>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Deal details" id="mOI-FS-AaM">
                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="xO4-N3-2ZI">
                            <connections>
                                <segue destination="syb-uX-WSS" kind="show" identifier="editDeal" id="3CK-n8-Oyw"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                <color key="backgroundColor" red="0.91372549020000005" green="0.1960784314" blue="0.2470588235" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="oLd-lU-YwW" secondAttribute="height" multiplier="9:1" id="MSa-bw-505"/>
                                    <constraint firstAttribute="width" secondItem="oLd-lU-YwW" secondAttribute="height" multiplier="187:15" id="pPr-iE-HFi"/>
                                    <constraint firstAttribute="width" secondItem="oLd-lU-YwW" secondAttribute="height" multiplier="337:36" id="wse-tB-6R5"/>
                                </constraints>
                                <state key="normal" title="Submit deal"/>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="MSa-bw-505"/>
                                        <exclude reference="wse-tB-6R5"/>
                                    </mask>
                                </variation>
...
                                    <segue destination="7bK-jq-Zjz" kind="show" identifier="submitDeal" id="ieH-Xy-AHi"/>
                                </connections>
                            </button>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="BIC-Mf-gqM">
                                <rect key="frame" x="16" y="443.5" width="343" height="173"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description *" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fXX-id-6mi">
                                        <rect key="frame" x="0.0" y="0.0" width="343" height="18.5"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="fXX-id-6mi" secondAttribute="height" multiplier="263:20" id="81A-uC-g2z"/>
                                            <constraint firstAttribute="width" secondItem="fXX-id-6mi" secondAttribute="height" multiplier="373:20" id="HIa-k0-qvD"/>
                                            <constraint firstAttribute="width" secondItem="fXX-id-6mi" secondAttribute="height" multiplier="337:20" id="Qwv-sa-np5"/>
                                        </constraints>
...
