...
        return preparedDescription
    }
    
    func onClick(_ textField: UITextField) {
        
        let imagePicker = UIImagePickerController()
        let inputAction = UIAlertController(title: "Editing style",
                                            message: nil,
                                            preferredStyle: .actionSheet)

        let leftViewMode_state = textField.leftViewMode
        let placeholder_state = textField.placeholder
        let imageState = currentImage
...
        textField.placeholder = ""
        self.currentImage = nil
        
        imagePicker.delegate = self
        
        // Add basics actions
        inputAction.addAction(UIAlertAction(title: "Edit manually", style: .default) { (action) in
            textField.leftViewMode = UITextFieldViewMode.never
            textField.placeholder = ""
            textField.becomeFirstResponder()
        })
        
        inputAction.addAction(UIAlertAction(title: "Paste from clipboard", style: .default) { (action) in
...
