...
        }
    }

    func addFakeData() {
        
        var deal:Deal = NSEntityDescription.insertNewObject(forEntityName: "Deal", into: DatabaseController.getContext()) as! Deal
        deal.title = "1 free hot coffee"
        deal.merchant = "@Starbucks"
        deal.desc = "Go to starbucks and grab your free coffee !<br>Only the 25 of august."
        deal.price = "Free"
        deal.imageLink = "https://s-media-cache-ak0.pinimg.com/originals/42/a7/c0/42a7c061205975eee974e10a3d4b5487.jpg"
        deal.link = ""
        deal.isEditable = true
...
